<resources>
    <string name="app_name">My First Application</string>
    <string name="text_view_1">Была та смутная пора,</string>
    <string name="text_view_2">Когда Россия молодая,</string>
    <string name="text_view_3">В бореньях силы напрягая, </string>
    <string name="text_view_4">Мужала с гением Петра.</string>
    <string name="text_view_5">Суровый был в науке славы</string>
    <string name="text_view_6">Ей дан учитель: не один</string>
    <string name="text_view_7">Урок нежданный и кровавый</string>
    <string name="text_view_8">Задал ей шведский паладин.</string>
    <string name="text_view_9">Но в искушеньях долгой кары,</string>
    <string name="text_view_10">Перетерпев судеб удары,</string>
    <string name="text_view_11">Окрепла Русь. Так тяжкий млат,</string>
    <string name="text_view_12">Дробя стекло, кует булат.</string>
</resources>