<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/text_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_view_1"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/text_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_view_2"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/text_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_view_3"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/text_view4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_view_4"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/text_view5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_view_5"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/text_view6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_view_6"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/text_view7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_view_7"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/text_view8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_view_8"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/text_view9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_view_9"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/text_view10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_view_10"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/text_view11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_view_11"
            android:textSize="10pt" />

         <TextView
            android:id="@+id/text_view12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_view_12"
            android:textSize="10pt" />

         </LinearLayout>







